layout smooth changes

--- a/web/src/main/webapp/WEB-INF/view/views.xml
+++ b/web/src/main/webapp/WEB-INF/view/views.xml
@@ -6,4 +6,8 @@
     <definition extends="main" name="index" >
     </definition>
 
+    <definition extends="main" name="task" >
+        <put-attribute name="body" value="/WEB-INF/view/task.jsp"/>
+    </definition>
+
 </tiles-definitions>
